# aicontext

./: .gitignore  README.md  example.py  package.json
python/: pyproject.toml
python/src/aicontext/: __init__.py  core.py
typescript/: README.md  package.json  tsconfig.json
typescript/src/: AIChatContext.ts  AIChatMessage.ts  decorators.ts  index.ts  types.ts
