[tool.poetry]
name = "aicontext"
version = "0.0.1"
description = "Simple context management for AI conversations"
authors = ["Spencer Kinney <email@spencerkinney.dev>"]
readme = "README.md"
packages = [{include = "aicontext", from = "src"}]
license = "MIT"
homepage = "https://github.com/spencerkinney/aicontext"
repository = "https://github.com/spencerkinney/aicontext"
keywords = ["ai", "chat", "context", "llm", "conversation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.14"
typing-extensions = "^4.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.0"
mypy = "^1.8.0"
isort = "^5.13.2"
ruff = "^0.1.14"
coverage = "^7.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.ruff]
select = ["E", "F", "I"]
ignore = []
line-length = 88
target-version = "py38"

[tool.mypy]
python_version = "3.8"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_optional = true